<resources>
    <string name="app_name">Krambil Sawit</string>
    <string name="top_menu_title_about">About</string>
    <string name="top_menu_description_about">About Application</string>
    <string name="top_menu_title_account">Account</string>
    <string name="top_menu_description_account">Account Menu</string>
    <string name="halaman_dashboard_awal">Halaman Dashboard Awal</string>
    <string name="article_title">Article</string>
    <string name="favourites_title">Favourites</string>
    <string name="main_title">Main</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="halaman_about_fragment">Halaman About Fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="judul_artikel">Judul artikel</string>
    <string name="deskripsi_artikel">Deskripsi Artikel</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc_sign_up">Silahkan Sign Up Akun</string>
    <string name="name">Name</string>
    <string name="placeholder_name">Krambil Sawit</string>
    <string name="email">Email</string>
    <string name="placeholder_email">nama@krambilsawit.id</string>
    <string name="password">Password</string>
    <string name="placeholder_password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="desc_sign_in">Silahkan Sign In</string>
    <string name="text_dont_account">Don\'t have an account ?</string>
    <string name="text_have_account">Already have an account?</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or">Or</string>
    <string name="google">google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="placeholder_confirm_password">confirm password</string>
    <string name="kategori_postingan">Kategori Postingan</string>
    <string name="tanggal">tanggal</string>
    <string name="tag">tag</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="default_web_client_id">619298383692-out5nlsptpdajdq0qegfba8pog97q4an.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="masukkan_isi_artikel">Masukkan isi artikel</string>
    <string name="post_now">Post Now</string>
    <string name="isi_artikel">Isi Artikel</string>
    <string name="home">Home</string>
    <string name="articles">Articles</string>
    <string name="new_article">New Article</string>
    <string name="share">Share</string>
    <string name="artikel_kosong">Artikel Kosong</string>
    <string name="wisata">Wisata</string>
    <string name="kuliner">Kuliner</string>
    <string-array name="tag_article">
        <item>Kuliner</item>
        <item>Budaya</item>
        <item>Wisata</item>
    </string-array>

</resources>