<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_24px"
        android:iconTint="@color/black"
        android:title="@string/home"
        android:checkable="true"/>
    <item
        android:id="@+id/main_item"
        android:title="@string/articles">
        <menu>
            <item
                android:id="@+id/nav_article"
                android:icon="@drawable/article_24px"
                android:iconTint="@color/black"
                android:title="@string/article_title"
                android:checkable="true"/>
            <item
                android:id="@+id/favourites_item"
                android:icon="@drawable/favorite_24px"
                android:iconTint="@color/black"
                android:title="@string/favourites_title"
                android:checkable="true" />
        </menu>
    </item>
</menu>