<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23.2dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo_login"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    app:shapeAppearanceOverlay="@style/RoundedSquare"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.0325"
                    android:text="@string/sign_in"
                    android:textColor="#464646"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:letterSpacing="0.0325"
                    android:text="@string/desc_sign_in"
                    android:textColor="#464646"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="0.0325"
                    android:text="@string/email"
                    android:textColor="#464646"
                    android:textSize="16.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/user_email"
                    android:fontFamily="@font/poppins"
                    android:letterSpacing="0.0325"
                    android:hint="@string/placeholder_email"
                    android:background="@android:color/transparent"
                    android:textColor="#464646"
                    android:textSize="12.3sp"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#b6b6b6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="0.0325"
                    android:text="@string/password"
                    android:textColor="#464646"
                    android:textSize="16.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/user_password"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:letterSpacing="0.0325"
                    android:hint="@string/placeholder_password"
                    android:textColor="#464646"
                    android:textSize="12.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#b6b6b6" />

                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:id="@+id/tv_login"
                    android:background="@drawable/rounded_primary"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/sign_in"
                    android:fontFamily="@font/poppins_medium"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="14dp"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_dont_account"
                        android:fontFamily="@font/poppins"
                        android:paddingEnd="8dp"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_signUp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/poppins_semibold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center">
                    <View
                        android:layout_width="110dp"
                        android:layout_height="0.7dp"
                        android:background="#b6b6b6" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_marginHorizontal="10dp"
                        android:fontFamily="@font/poppins"/>
                    <View
                        android:layout_width="110dp"
                        android:layout_height="0.7dp"
                        android:background="#b6b6b6" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_red"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/google"
                        android:paddingEnd="10dp"
                        app:tint="@color/white"
                        android:contentDescription="@string/google" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/sign_in_with_google"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>