<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.Post">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_edittext_background"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/judul_artikel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/upload_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/upload_foto"

        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:id="@+id/upload_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/upload_file">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="59dp"
            android:background="@drawable/rounded_edittext_background"
            android:clickable="true"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_upload_file_24" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/isi_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/isi_artikel"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/upload_foto" />

    <EditText
        android:id="@+id/et_isi_artikel"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_edittext_background"
        android:inputType="text"
        android:fontFamily="@font/poppins"
        android:gravity="top|center_vertical"
        android:hint="@string/masukkan_isi_artikel"
        android:textColor="@color/grey_60"
        app:layout_constraintTop_toBottomOf="@id/isi_artikel"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rounded_edittext_background"
        android:text="@string/post_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_isi_artikel" />

</androidx.constraintlayout.widget.ConstraintLayout>