<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23.2dp"
            android:paddingVertical="20dp">

            <Button
                android:id="@+id/tv_back"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:text="@string/back"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                app:iconTint="@color/colorPrimary"
                app:icon="@drawable/baseline_arrow_back_ios_24"/>


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo_login"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:shapeAppearanceOverlay="@style/RoundedSquare"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.0325"
                android:text="@string/sign_up"
                android:textColor="#464646"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.0325"
                android:text="@string/desc_sign_up"
                android:textColor="#464646"
                android:textAlignment="center"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:fontFamily="@font/poppins_medium"
                app:endIconMode="clear_text"
                android:layout_marginTop="35dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:fontFamily="@font/poppins"
                    android:textSize="12.3sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/poppins_medium"
                app:endIconMode="clear_text"
                android:layout_marginTop="15.5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins"
                    android:textSize="12.3sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/poppins_medium"
                app:endIconMode="password_toggle"
                android:layout_marginTop="15.5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins"
                    android:textSize="12.3sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/poppins_medium"
                app:endIconMode="password_toggle"
                android:layout_marginTop="15.5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins"
                    android:textSize="12.3sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/tv_updateuserdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginTop="45dp"
                android:textSize="15sp"
                android:text="@string/sign_up"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>