<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/container_article_item_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_login"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/judul_artikel"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:fontFamily="@font/poppins"
                android:layout_marginBottom="8dp"
                android:text="@string/deskripsi_artikel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tv_tag"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/iv_option"
        app:icon="@drawable/more_vert_24px"
        app:iconTint="@color/black"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="top|end"
        android:padding="5dp" />

</FrameLayout>